# CellularGeneticAlgorithm

./: .gitignore  LICENSE  README.md
src/cpp/: CImg.h  CMakeLists.txt  cell.h  cellular_grid.cpp  cellular_grid.h  enums.h  image.cpp  main.cpp  operators.h  point.h  stopwatch.h
src/cs/: cellular-ga.sln
src/cs/cellular-ga/: BitmapPlus.cs  Cell.cs  CellularGrid.cs  NeighborhoodType.cs  Operators.cs  Program.cs  RandomGenerator.cs  ReplaceType.cs  cellular-ga.csproj  packages.config
src/cs/cellular-ga/Properties/: AssemblyInfo.cs
